--- a/main.html
+++ b/main.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+<header>
+	<h1> Goa </h1>
+	
+</header>
+	<br>
+	<p> Goa Located on India's western coast, it is bordered by Maharashtra and Karnataka states. It has a 65-mi (105-km) coastline on the Arabian Sea and includes the offshore island of Goa. It was ruled by Hindu dynasties and Muslim sultanates until the late 15th century and came under Portuguese control in 1510.</p>
+	<ol>
+		<li><em>Calangute</em></li>
+		<li>Museum of Christian Art</li>
+		<li>Fort Aguada</li>
+		<li>Grand Island</li>
+		<li>Baga Beach</li>
+	</ol>
+	<ul>
+		<li><em>Fish Curry Rice</em></li>
+		<li>Chicken Xacuti</li>
+		<li>Poee</li>
+		<li>Vindaloo</li>
+		<li>Sorpotel</li>
+	</ul>
 </body>
-
 </html>
