--- a/main.html
+++ b/main.html
@@ -7,24 +7,23 @@
 </head>
 <body>
 <header>
-	<h1> Goa </h1>
+	<h1> Pune </h1>
 	
 </header>
 	<br>
-	<p> Goa Located on India's western coast, it is bordered by Maharashtra and Karnataka states. It has a 65-mi (105-km) coastline on the Arabian Sea and includes the offshore island of Goa. It was ruled by Hindu dynasties and Muslim sultanates until the late 15th century and came under Portuguese control in 1510.</p>
+	<p>pune is the second largest district in the state and covers 5.10% of the total geographical area of the state. The landscape of Pune district is distributed triangularly in western Maharashtra at the foothills of the Sahyadri Mountains and is divided into three parts: “Ghatmatha”, “Maval” and “Desh”.</p>
 	<ol>
-		<li><em>Calangute</em></li>
-		<li>Museum of Christian Art</li>
-		<li>Fort Aguada</li>
-		<li>Grand Island</li>
-		<li>Baga Beach</li>
-	</ol>
+		<li><em>Shaniwar Wada</em></li>
+		<li></em><em>Sinhagad Fort</em></li>
+		<li><em>Chaturshringi Temple<em></em></li>
+		</em><li><em>Aga Khan Palace</em><<em>/li>
+		<em></em></ol>
 	<ul>
-		<li><em>Fish Curry Rice</em></li>
-		<li>Chicken Xacuti</li>
-		<li>Poee</li>
-		<li>Vindaloo</li>
-		<li>Sorpotel</li>
+		<li><em>Vada Pav</em></li>
+		<li><em>Misal Pav</em></li>
+		<li><em>Pithla Bhakri</em></li>
+		<li><em>Dabeli</em></li>
+		<li><em>Mysore Masala Dosa</em></li>
 	</ul>
 </body>
 </html>
