--- a/main.html
+++ b/main.html
@@ -7,17 +7,16 @@
 </head>
 <body>
 <header>
-	<h1> Pune </h1>
-	
+	<h1> Pune </h1>	
 </header>
 	<br>
 	<p>pune is the second largest district in the state and covers 5.10% of the total geographical area of the state. The landscape of Pune district is distributed triangularly in western Maharashtra at the foothills of the Sahyadri Mountains and is divided into three parts: “Ghatmatha”, “Maval” and “Desh”.</p>
 	<ol>
 		<li><em>Shaniwar Wada</em></li>
-		<li></em><em>Sinhagad Fort</em></li>
-		<li><em>Chaturshringi Temple<em></em></li>
-		</em><li><em>Aga Khan Palace</em><<em>/li>
-		<em></em></ol>
+		<li><em>Sinhagad Fort</em></li>
+		<li><em>Chaturshringi Temple</em></li>
+		<li><em>Aga Khan Palace</em></li>
+		</ol>
 	<ul>
 		<li><em>Vada Pav</em></li>
 		<li><em>Misal Pav</em></li>
