--- a/main.html
+++ b/main.html
@@ -19,11 +19,10 @@
 		<li><b>Lonawala</b></li>
 		</ol>
 	<ul>
-		<li><b>Vada Pav</b></li>
-		<li><b>Misal Pav</b></li>
-		<li><b>Pithla Bhakri</b></li>
-		<li><b>Dabeli</b></li>
-		<li><b>Mysore Masala Dosa</b></li>
-	</ul>
+		<li> <i>Vada Pav</i></li>
+		<li><i>Pithli Bhakar</i></li>
+		<li><i>Mysure Masala Dosa </i></li>
+		<li><i>Misal Pav</i></li>
+		<li><i>Dabeli</i></li>
 </body>
 </html>
